--- a/src/app/pages/print-label/print-label.component.html
+++ b/src/app/pages/print-label/print-label.component.html
@@ -113,7 +113,7 @@
                 <th>Ngày nhận kế hoạch</th>
                 <th>YY</th>
                 <th>WW</th>
-                <th>Line nhãn</th>
+                <th>Line nhận</th>
                 <th>Người in</th>
                 <th>Tình trạng</th>
                 <th>Ghi chú</th>
